syntax = "proto3";
package greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string message = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string message = 1;
}

message DecomposeRequest {
	int32 number = 1;
}

message DecomposeResponse {
	int32 number = 1;
}


service GreetingService{
	//unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	//server streaming
	rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}
	rpc DecomposeToPrime (DecomposeRequest) returns (stream DecomposeResponse) {}
}